libs/@local/hashql/ast/tests/ui/lower/special-form-expander/input-1.jsonc
//@ run: fail
//@ description: input/1 should error out
["::kernel::special_form::input", "x"]
//~^ ERROR Add missing arguments
